@@ -81,17 +81,14 @@
 #define	FPURGE	fpurge
 #endif
 
-/* Externals */
-extern int yydebug;
-
 /* Global Variables */
 FilterEngine_t *Engine;
-int 		verbose;
+static int verbose;
 
 /* Local Variables */
 static const char *nfdump_version = VERSION;
 
-send_peer_t peer;
+static send_peer_t peer;
 
 extension_map_list_t *extension_map_list;
 
@@ -114,6 +111,7 @@ static void usage(char *name) {
 		printf("usage %s [options] [\"filter\"]\n"
 					"-h\t\tthis text you see right here\n"
 					"-V\t\tPrint version and exit.\n"
+					"-E\t\tPrint verbose messages. For debugging purpose only.\n"
 					"-H <Host/ip>\tTarget IP address default: 127.0.0.1\n"
 					"-j <mcast>\tSend packets to multicast group\n"
 					"-4\t\tForce IPv4 protocol.\n"
@@ -460,6 +458,9 @@ time_t t_start, t_end;
 			case 'B':
 				blast = 1;
 				break;
+			case 'E':
+				verbose = 1;
+				break;
 			case 'V':
 				printf("%s: Version: %s\n",argv[0], nfdump_version);
 				exit(0);
@@ -486,7 +487,7 @@ time_t t_start, t_end;
 				exit(255);
 				break;
 			case 'L':
-				if ( !InitLog(argv[0], optarg) )
+				if ( !InitLog(0, argv[0], optarg, verbose) )
 					exit(255);
 				break;
 			case 'p':
