@@ -1,5 +1,6 @@
 2020-02-01
 - Remove external global vars
+- Set verbose logging off by default in non daemon mode
 
 2020-01-31
 - Remove old legacy records
